--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,8 +20,8 @@
 .back-to-top {
     position: fixed;
     display: none;
-    right: 45px;
-    bottom: 45px;
+    left: 45px;
+    bottom: 20px;
     z-index: 99;
 }
 
